--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#36393F">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#36393F">
@@ -34,7 +35,7 @@
 
 <body id='body' class='preload'>
     <div id='logo-container'>
-        <img src="./assets/logo.svg" alt="server_boost_logo">
+        <img src="./assets/logo.png" alt="server_boost_logo">
         <h1>SERVER BOOST</h1>
     </div>
     <div id='main-container'>
@@ -43,15 +44,19 @@
                 <p><strong>Passo 1: </strong>Clique no nome do servidor, e logo depois clique em <strong
                         class='strong_item'>“Impulso do servidor”.</strong> O
                     mesmo processo que está descrito no vídeo abaixo:</p>
-                <video src="./assets/videos/server_boost_parte1.mp4" autoplay loop>Seu navegador não suporta videos
-                    :(</video>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/6Pq8r2AWfg4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </li>
             <li>
                 <p><strong>Passo 2: </strong>Clique em <strong class='strong_item'>“Impulsionar este servidor”.</strong>
                     Feito isso, irá abrir uma tela onde você pode selecionar a quantidade de boosts que quer dar no
                     servidor, depois que você selecionar aperte <strong class="strong_item">"Continuar".</strong></p>
-                <video src="./assets/videos/server_boost_parte2.mp4" autoplay loop>Seu navegador não suporta videos
-                    :(</video>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/cVhnQeKkgeo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </li>
             <li>
                 <p><strong>Passo 3: </strong>Agora o passo final, o pagamento. Você pode fazer isso de duas formas:
@@ -64,8 +69,10 @@
                     tela de
                     sucesso.
                 </p>
-                <video src="./assets/videos/server_boost_parte3.mp4" autoplay loop>Seu navegador não suporta videos
-                    :(</video>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/5GbYBillKnQ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </li>
         </ul>
     </div>
