--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <body id='body' class='preload'>
     <div id='logo-container'>
-        <img src="./assets/logo.png" alt="server_boost_logo">
+        <!-- <img src="./assets/logo.svg" alt="server_boost_logo"> -->
+        <embed src="./assets/logo.svg">
         <h1>SERVER BOOST</h1>
     </div>
     <div id='main-container'>
